--- a/index.liquid
+++ b/index.liquid
@@ -3,5 +3,10 @@ layout: layout.liquid
 title: Gavin
 ---
 
-<h1>{{ title }} Singapore airline</h1>
-<h2>{{ homePage.user1 }}</h2>
+<!-- <h1>{{ title }}</h1> -->
+<p><strong>page title:</strong> {{ homePage.page_title }}</p>
+<p><strong>page description:</strong> {{ homePage.page_description }}</p>
+<p><strong>banner title:</strong> {{ homePage.body.banner_title }}</p>
+<p><strong>banner description:</strong> {{ homePage.body.banner_description }}</p>
+<p><strong>banner btn text:</strong> {{ homePage.body.banner_btn_text }}</p>
+<img style="max-width: 50%;" src="{{homePage.body.banner_image}}" alt="">
