--- a/index.liquid
+++ b/index.liquid
@@ -3,7 +3,7 @@ layout: layout.liquid
 title: Gavin
 ---
 
-<!-- <h1>{{ title }}</h1> -->
+<h1>{{ title }} Singapore airline</h1>
 <p><strong>page title:</strong> {{ homePage.page_title }}</p>
 <p><strong>page description:</strong> {{ homePage.page_description }}</p>
 <p><strong>banner title:</strong> {{ homePage.body.banner_title }}</p>
